QA bugs; fix scrollbars; make account sessions 24 hour (#420)
* fix some QA bugs; fix scrollbar issues; make session length 24h

* add scrollbar for account history

* move scrollbar from AccountAssets to parent

* use maxheight prop instead of passing a ref

--- a/extension/src/popup/components/accountHistory/TransactionDetail/styles.scss
+++ b/extension/src/popup/components/accountHistory/TransactionDetail/styles.scss
@@ -1,4 +1,6 @@
-$icon-dimension: 0.875rem;
+:root {
+  --TransactionDetail--icon-dimension: 0.875rem;
+}
 
 .TransactionDetail {
   height: 100%;
@@ -21,13 +23,13 @@ $icon-dimension: 0.875rem;
       &__icon {
         background: var(--pal-brand-primary);
         border-radius: 10rem;
-        height: $icon-dimension;
-        width: $icon-dimension;
+        height: var(--TransactionDetail--icon-dimension);
+        width: var(--TransactionDetail--icon-dimension);
       }
 
       img {
-        height: $icon-dimension;
-        width: $icon-dimension;
+        height: var(--TransactionDetail--icon-dimension);
+        width: var(--TransactionDetail--icon-dimension);
       }
     }
   }
